k8s/cloud/overlays/exposed_services_traefik/api_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: plc-cloud-backend-transport@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
