k8s/cloud/overlays/exposed_services_traefik/vzconn_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vzconn-service
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: plc-cloud-backend-transport@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ports:
  - port: 51600
    protocol: TCP
    targetPort: 51600
    name: tcp-http2
  selector:
    name: vzconn-server
